--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,137 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.html{
+  font-size: 62.5%;
+}
+
+#root{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #101418;
+}
+
+.App{
+ 
+ margin: 48px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 32px;
+  row-gap: 32px;
+  justify-content: space-between;
+  align-items: center;
+}
+.product-container{
+  width: 350px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  
+}
+ 
+  
+.product-image{
+  width: 200px;
+  height: 350px;
+}
+.product-name{
+  height: 100px;
+  text-align: center;
+  font-size: 20px;
+  background-color: #d3d3d3;
+  width: 100%;
+  max-height: 72px; /* Adjust this value to control the initial height */
+  overflow: hidden;
+  transition: max-height 0.5s ease;
+  padding: 9px;
+
+}
+
+.product-name:hover{
+  max-height: none;
+}
+.product-price{
+  font-size: 18px;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2.4rem;
+  width: 100%;
+
+}
+.red{
+  color: red;
+  text-decoration: line-through;
+}
+.green{
+  color: green;
+  font-size: 20px;
+}
+
+.btn-area{
+  width: 100%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    flex: 4;
+}
+
+.btn{
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: all 0.3s ease-in-out;
+}
+
+/* Add this CSS to your App.css or a separate CSS file */
+/* Add this CSS to your App.css or a separate CSS file */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  z-index: 1050; /* You can adjust the z-index as needed */
+  /* semi transparent backgorund */
+  background-color: rgba(0, 0, 0, 0.5);
+  
+}
+
+.modal-dialog {
+  max-width: 50%;
+  margin: 0;
+  background-color: rgb(38, 38, 60);
+}
+
+.modal-content {
+  padding: 20px;
+}
+
